:books: update package.json

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "serverless-play",
+  "name": "srvrlss",
   "version": "1.0.0",
-  "description": "Playing with _Vercel_, can't believe how easy it was!",
+  "description": "A bunch of serverless functions",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,7 +10,11 @@
     "type": "git",
     "url": "git+https://github.com/joshmu/serverless-play.git"
   },
-  "keywords": [],
+  "keywords": [
+    "serverless",
+    "joshmu",
+    "vercel"
+  ],
   "author": "Josh Mu <hello@joshmu.com> (https://joshmu.com/)",
   "license": "MIT",
   "bugs": {
